<resources>
    <string name="app_name">TweetStat</string>
    <string name="error_request">Ops! Something\'s wrong!</string>
    <string name="error_tweet">Tweet information not found</string>
    <string name="error_no_title">No title available</string>
    <string name="error_no_description">No description available</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="title_mytweets">My Tweets</string>
    <string name="title_timeline">Timeline</string>
    <string name="title_search">Search</string>
    <string name="title_hashtags">Hashtags</string>

    <string name="preference_file_key">tweetstatpreferences</string>
    <string name="welcome_screen_flag">welcome_screen_flag</string>

    <string name="full_graph_activity_title">Graph</string>
    <string name="statistics_history_activity_title">Statistics History</string>
    <string name="no_connection">No connection aviable</string>
    <string name="username">username</string>
    <string name="welcome_to_twettstat">Welcome to tweetStat</string>
    <string name="retrieve_data">Retrieve the data</string>
    <string name="from_your_timeline">"From your timeline, "</string>
    <string name="hashtags_and_search">hashtags, search...</string>
    <string name="generate_statistics">Generate statistics</string>
    <string name="save_it">Save it</string>
    <string name="generated_by_twetstat">Statistics Chart\ngenerated by TweetStat</string>
    <string name="tweets_used">" tweets used with the information required"</string>
    <string name="no_query_message">Can not perform statistic without a query</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="dimension_data">Select dimension of data</string>
    <string name="day">Day</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="my_account">My Account</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="statistics_history">Statistics History</string>
    <string name="tweets_header">Tweets</string>
    <string name="following_header">Following</string>
    <string name="followers_header">Followers</string>
    <string name="dimension_data_history">Dimension of data:</string>
    <string name="tweets_used_history">Tweets used:</string>
    <string name="generated">Generated:</string>
    <string name="query">Query:</string>
    <string name="saved_succes">Saved Succesfully</string>


</resources>
