<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/statsActivity"
            android:icon="@drawable/ic_pie_chart_outlined_white_24dp"
            android:title="@string/statistics_history" />
    </group>

    <item android:title="@string/my_account">
        <menu>
            <item
                android:id="@+id/share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_exit_to_app_white_24dp"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
